@startuml
title Diagramme de classes global - GOSPORT
left to right direction
hide circle
skinparam shadowing false
skinparam classAttributeIconSize 0

class User {
  +id: number
  +email: string
  +password?: string
  +role: string
  +is_verified: boolean
  +oauth_provider: string
  +profile_completed: boolean
  +created_at: Date
  +register()
  +login()
  +verifyEmail()
  +resetPassword()
  +updateProfile()
}

class Athlete {
  +id: number
  +userId: number
  +sport?: string
  +goals?: string
  +experienceLevel?: string
  +fitnessLevel?: string
  +joinedDate: Date
  +completeProfile()
  +updateMetrics()
  +consultDashboard()
}

class CoachProfile {
  +id: uuid
  +userId: number
  +bio?: string
  +experience_years: number
  +rating: number
  +monthlyPrice: decimal
  +verified: boolean
  +updateProfile()
  +publishProgram()
  +manageAthletes()
}

class NutritionistProfile {
  +id: uuid
  +userId: number
  +bio?: string
  +experience_years: number
  +rating: number
  +specializations?: string[]
  +updateProfile()
  +createDietPlan()
  +monitorCompliance()
}

class CoachingRequest {
  +id: uuid
  +athleteId: number
  +coachProfileId: uuid
  +initiator: enum
  +status: pending|accepted|rejected
  +message?: string
  +send()
  +accept()
  +reject()
  +disconnect()
}

class NutritionConnection {
  +id: uuid
  +athleteId: number
  +nutritionistProfileId: uuid
  +initiator: enum
  +status: pending|accepted|rejected
  +message?: string
  +send()
  +respond()
  +listClients()
}

class CoachSpecialization {
  +id: uuid
  +coachProfileId: uuid
  +specialization: string
  +is_primary: boolean
}

class CoachCertification {
  +id: uuid
  +coachProfileId: uuid
  +name: string
  +issuer?: string
  +verified: boolean
}

class Exercise {
  +id: uuid
  +name: string
  +target_muscle?: string
  +difficulty_level: string
  +gif_url?: string
  +is_custom: boolean
  +search()
  +getByBodyPart()
  +getGif()
}

class Program {
  +id: number
  +name: string
  +athleteId?: number
  +coachId: number
  +status: string
  +is_template: boolean
  +startDate: Date
  +create()
  +assign()
  +accept()
  +quit()
}

class ProgramDay {
  +id: number
  +programId: number
  +day_number: number
  +title?: string
  +addExercise()
}

class ProgramExercise {
  +id: number
  +programDayId: number
  +exercise_id: string
  +sets: number
  +reps: number
  +rpe?: number
  +order: number
}

class WorkoutLog {
  +id: number
  +athleteId: number
  +programId?: number
  +sessionId?: number
  +scheduledDate: Date
  +completedAt?: Date
  +status: string
  +start()
  +complete()
  +quit()
  +emitEvent()
}

class ExerciseLog {
  +id: number
  +workoutLogId: number
  +exercise_name: string
  +setsCompleted: number
  +repsPerSet?: number[]
  +weightKgPerSet?: number[]
}

class ActivityEvent {
  +id: number
  +athleteId: number
  +type: string
  +payload?: json
  +created_at: Date
  +record()
}

class Goal {
  +id: number
  +athleteId: number
  +name: string
  +targetValue?: number
  +currentValue?: number
  +status: string
  +create()
  +updateProgress()
  +close()
}

class BodyMetric {
  +id: number
  +athleteId: number
  +date: Date
  +weight?: decimal
  +bodyFat?: decimal
  +vo2max?: decimal
  +addMetric()
}

class DietaryProfile {
  +id: uuid
  +athleteId: number
  +bmr?: number
  +tdee?: number
  +targetCalories?: number
  +allergies?: string[]
  +calculateTargets()
}

class DietPlan {
  +id: uuid
  +name: string
  +goal: enum
  +isTemplate: boolean
  +athleteId?: number
  +startDate?: string
  +create()
  +build()
  +assign()
  +delete()
}

class DietDay {
  +id: uuid
  +dietPlanId: uuid
  +day_number: number
  +title?: string
  +isRestDay: boolean
}

class Meal {
  +id: uuid
  +dietDayId: uuid
  +mealType: enum
  +timeOfDay: string
  +calories: number
  +protein: number
  +carbs: number
  +fats: number
}

class MealLog {
  +id: uuid
  +athleteId: number
  +foodName: string
  +calories: number
  +protein: number
  +carbs: number
  +fats: number
  +loggedAt: Date
  +logMeal()
  +deleteLog()
}

class DietLog {
  +id: uuid
  +athleteId: number
  +dietPlanId?: uuid
  +date: string
  +isCompleted: boolean
  +totalCaloriesConsumed: number
  +computeCompliance()
}

class Conversation {
  +id: uuid
  +type: enum
  +participant1Id: number
  +participant2Id: number
  +lastMessageContent?: string
  +lastMessageAt?: Date
  +start()
  +listMessages()
}

class Message {
  +id: uuid
  +conversationId: uuid
  +senderId: number
  +content: string
  +isRead: boolean
  +created_at: Date
  +send()
  +markRead()
}

class Notification {
  +id: number
  +userId: number
  +type: string
  +title: string
  +body?: string
  +read: boolean
  +push()
  +markRead()
  +delete()
}

class Session {
  +id: number
  +athleteId?: number
  +coachId?: number
  +programId?: number
  +date?: Date
  +time: string
  +status: string
  +create()
  +update()
  +cancel()
}

class UserInvitation {
  +id: uuid
  +email: string
  +coachId: number
  +status: pending|accepted|expired
  +token?: string
  +expiresAt?: Date
  +invite()
  +accept()
}

User "1" --> "0..1" Athlete : possède
User "1" --> "0..1" CoachProfile : possède
User "1" --> "0..1" NutritionistProfile : possède
Athlete "1" --> "0..*" CoachingRequest : demande
CoachProfile "1" --> "0..*" CoachingRequest : reçoit
CoachProfile "1" --> "0..*" CoachSpecialization : décrit
CoachProfile "1" --> "0..*" CoachCertification : certifie
Athlete "1" --> "0..*" NutritionConnection : demande
NutritionistProfile "1" --> "0..*" NutritionConnection : suit
CoachProfile "1" --> "0..*" Program : crée
Athlete "1" --> "0..*" Program : reçoit
Program "1" --> "1..*" ProgramDay : compose
ProgramDay "1" --> "1..*" ProgramExercise : contient
ProgramExercise "0..*" --> "1" Exercise : référence
Athlete "1" --> "0..*" WorkoutLog : réalise
WorkoutLog "1" --> "0..*" ExerciseLog : détaille
Athlete "1" --> "0..*" BodyMetric : mesure
Athlete "1" --> "0..*" Goal : poursuit
Athlete "1" --> "0..1" DietaryProfile : configure
NutritionistProfile "1" --> "0..*" DietPlan : élabore
Athlete "1" --> "0..*" DietPlan : suit
DietPlan "1" --> "1..*" DietDay : organise
DietDay "1" --> "1..*" Meal : planifie
Athlete "1" --> "0..*" MealLog : journalise
DietPlan "1" --> "0..*" DietLog : contrôle
User "1" --> "0..*" Conversation : participe
Conversation "1" --> "0..*" Message : contient
User "1" --> "0..*" Message : envoie
User "1" --> "0..*" Notification : reçoit
Athlete "1" --> "0..*" Session : réserve
User "1" --> "0..*" Session : anime
ProgramDay "1" --> "0..*" Session : alimente
User "1" --> "0..*" UserInvitation : envoie
Athlete "1" --> "0..*" ActivityEvent : génère
@enduml
